# tap-dbt-artifacts

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  test.yml  update-uv-lock.yml
tap_dbt_artifacts/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_dbt_artifacts/schemas/: catalog.schema.json  manifest.schema.json  run-results.schema.json  sources.schema.json
tests/: test_core.py
