[project]
name = "ticketswap-tap-dbt-artifacts"
version = "0.0.1"
description = "Singer tap for DbtArtifacts, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Fernando Corte Vargas", email = "fernando.cortevargas@ticketswap.com" }]
keywords = [
    "ELT",
    "DbtArtifacts",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = "<3.13,>=3.9"
dependencies = [
    "singer-sdk==0.48.1",
]

[project.optional-dependencies]
s3 = [
    "fs-s3fs==1.1.1",
]

[project.scripts]
# CLI declaration
tap-dbt-artifacts = 'tap_dbt_artifacts.tap:TapDbtArtifacts.cli'

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "singer-sdk[testing]==0.44.2",
]
[tool.hatch.build.targets.wheel]
packages = [
    "tap_dbt_artifacts",
]

[tool.pytest.ini_options]
addopts = [
    "--durations=10",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"
